Fixed the ui and rules for play like check button will only be visible when genertate button is clicked:)

--- a/src/css_files/LotteryPage.css
+++ b/src/css_files/LotteryPage.css
@@ -3,11 +3,12 @@
     border: 4px solid black;
     border-radius: 40px;
     width: 50vw;
-    height: 50vh;
+    height: 60vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: 15vh;
    
 }
 
